CrowdSim/CrowdSim/CrowdSim.log
Compiler Command: aoc -march=emulator --board de1soc_sharedonly CrowdSim.cl
/home/alex/CrowdSim/CrowdSim/CrowdSim.cl:454:41: error: Kernel argument cannot be a pointer to pointer(s)
void computeNewVelocity(__global Agent* agents, __global AgentTreeNode* agentTree_, float timeStep)
                                        ^
/home/alex/CrowdSim/CrowdSim/CrowdSim.cl:454:73: warning: declaring kernel argument with no 'restrict' may lead to low kernel performance
void computeNewVelocity(__global Agent* agents, __global AgentTreeNode* agentTree_, float timeStep)
                                                                        ^
/home/alex/CrowdSim/CrowdSim/CrowdSim.cl:551:39: error: Kernel argument cannot be a pointer to pointer(s)
__kernel void update (__global Agent* agents, float timeStep)
                                      ^
/home/alex/CrowdSim/CrowdSim/CrowdSim.cl:565:46: error: Kernel argument cannot be a pointer to pointer(s)
__kernel void updateCustom (__global PAgent* agents, float timeStep, __global float4* positionsForRendering)
                                             ^
/home/alex/CrowdSim/CrowdSim/CrowdSim.cl:565:87: warning: declaring kernel argument with no 'restrict' may lead to low kernel performance
__kernel void updateCustom (__global PAgent* agents, float timeStep, __global float4* positionsForRendering)
                                                                                      ^
2 warnings and 3 errors generated.
